Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 Kent Landfield (Feb 19, 2003)
   - Updated TODO with configure issues and other corrections we want
     to make to the code in the near future.

 Jose Kahan (jose@w3.org) (Feb 19, 2003)
   - Upgraded extract_rfc2047_content() as the previous extracting
     algorithm was broken.

 Kent Landfield (Feb 18, 2003)
   - Added missing contrib utilities, contrib/msg2hypermailarchive.py
     and contrib/runtest to FILES
   - Added checking in struct.c to limit the length of Subject: line to 
     avoid theoretical Denial-of-Service
   - Removed code that was ifdef'ed NOTUSED

 Peter McCluskey (Feb 17, 2003)
   Fix to attachment Content-Type parsing to strip all whitespace off
  end of type rather than just newline.

 Kent Landfield (Feb 17, 2003)
   Added safe_tmpfile() usage instead of internal usage.

 Peter McCluskey (Feb 14, 2003)
   Disabled conversion of file:// into href - it seemed to allow anyone
  who could access the web server via local host could read any file
  that the web server had permission to read rather than just files
  in the archive directory.

 Peter McCluskey (Feb 13, 2003)
   Add -DTRIO_MINIMAL. Solves a trio compile problem in SunOS and makes
  binary a little smaller.
   Strip mail.c down to minimal warning message so we don't have to worry
  about analyzing it's security problems.
   Changes to get strerror, memmove from pcre when missing (e.g. on SunOS).
  How was this working on SunOS before?
   Fix faulty sizeof in snprintf for MSG_ENCODING_IS_NOT_SUPPORTED.

 Kent Landfield (kent@hypermail.org) (February 12, 2003)
  - Converted msg2archive.c to use Thomas Biege's <thomas@suse.de>
    s_popen() instead of popen().

 Kent Landfield (kent@hypermail.org) (February 11, 2003)
  - Modified configure.in to test for snprintf. This is needed
    since Solaris 2.5.1 does not have snprintf.  This only affects
    the msg2archive and mbox2hypermail in the archive directory.
